tests/paczka1/fuzzy1/27032924.err
Error in line 12: yMp A665 71,5
Error in line 10: zknkEJMy A665 53,1
Error in line 14: 49BNOQtpHfx A801 79,4
Error in line 34: 7NCXxb5cn A341 39,36
Error in line 15: yMp A341 59,1
Error in line 28: 49BNOQtpHfx A279 15,7
